src/edu/itsco/Compilador.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */
options
{
  static = true;
}

PARSER_BEGIN(Compilador)
package edu.itsco;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import edu.itsco.semantica.*;
import edu.itsco.generador.*;
public class Compilador
{

  private static AdministraVariable adminVariable;
  private static GeneradorCodigo generador;
  
  public static void main(String args [])
  {
    try { 
    	//Compilador compilador = new Compilador(System.in);
    	if(args.length == 0) {
			System.out.println("No hay archivo de entrada");
			System.exit(0);
    	}
		/*Compilador compilador = new Compilador(
		  new FileInputStream("programa.txt"));*/
		Compilador compilador = new Compilador(
		  new FileInputStream(args[0]));
		adminVariable = new AdministraVariable();
		generador = new GeneradorCodigo();
		generador.creaCabecera();
		System.out.println("Iniciando la compilacion...");
    	compilador.principal();
    	System.out.println("Compilo correctamente xD");
    	generador.cerrarPrograma();
  	}catch(ParseException pex) {
  	  	//Aqui hagan algo con su exception
		System.err.println(pex.getMessage());
	}catch(SemanticException se) {
	  	System.err.println(se.getMessage());
  	}catch(FileNotFoundException fex) {
		System.err.println(fex.getMessage());
    }
  }
}

PARSER_END(Compilador)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
}

/* Palabras reservadas */
TOKEN:{
  < PROGRAM: "program" >
| < INTEGER: "integer" >
| < DECIMAL: "decimal" >
| < STRING: "string" >

| < PRINT: "print" >
| < READ: "read" >

| < IF: "if" >
| < ELSE: "else" >

| < SELECT: "select" >
| < CASE: "case" >
| < BREAK: "break" >

| < FOR : "for" >
| < WHILE: "while" >
| < DO: "do" >

}

TOKEN: {
  < SUMA: "+" >
| < RESTA: "-" >
| < MULTI: "*" >
| < DIV: "/" >
| < MOD: "%" >
| < IGUAL: "=" >

| < MAYOR: ">" >
| < MENOR: "<" >

| < AND: "&&" >
| < OR: "||" >
| < NOT: "!" >

| < AP: "(" >
| < CP: ")" >

| < AL: "{" >
| < CL: "}" >

| < PC: ";" >
| < DP: ":" >
| < COMA: "," >

}

TOKEN: {
  < #digito: ["0"-"9"] >
| < #letra: ["a"-"z","A"-"Z"] >

| < ID: (< letra >|"_") (< letra >|"_" |< digito >)* >
| < INT_VAL: (< digito >)+ >
| < DEC_VAL: (< digito >)+ "." (< digito >)+ >
| < STR_VAL: "\"" (~["\""])* "\"" >
}

void principal() throws SemanticException: {
} {
	< PROGRAM > < ID > <AL >
	   sentencias()
	< CL >
}

void sentencias() throws SemanticException: {
} {
	(	  declararVariable()
	| gramaticaLeer()
	| gramaticaImprimir()
	| gramaticaAsignacion()
	| gramaticaIf()
	| gramaticaSwitch()
	| gramaticaFor()
	| gramaticaWhile()
	| gramaticaDo()
	)+
}

void declararVariable() throws SemanticException: {
  Token id;
  Token tipoDato;
  Token aux;
  boolean inicializada = false;
} {
	tipoDato = tipoDato() id = < ID >
	{
	  generador.declaraVariable(
	    	 tipoDato.image, id.image);
	}
	[ aux = <IGUAL >
		{ generador.escribeToken(aux.image); }
		operacion(tipoDato.image, false)
		{ inicializada = true; } ]
	 < PC >
	{
	  Variable v = new Variable(
	  	tipoDato.image, id.image, inicializada);
	  //System.out.println(v);
	  adminVariable.addVariable(v);
	  //agregando el salto
	  generador.saltoDeLinea();
	}
}

Token tipoDato(): {
  Token tipoDato;
} {
  (    tipoDato = < INTEGER >
    | tipoDato = < DECIMAL >
    | tipoDato = < STRING >
  )
  {  return tipoDato; }
}

void gramaticaLeer() throws SemanticException: {
  Token id;
} {
	< READ > <AP > id = <ID > <CP > <PC >
	{
	  Variable v = new Variable();
	  v.setNombre(id.image);
	  adminVariable.existeVariable(v);
	  v = adminVariable.obtenerVariable(v);
	  v.setInicializada(true);
	  //imprimimos el readline
	  generador.generaLeer(v.getTipoDato(),
	  	 v.getNombre());
	}
}

void gramaticaImprimir() throws SemanticException: {
  Token aux;
} {
	< PRINT > <AP >
	{
	  generador.escribeInstruccion("Console.WriteLine(");}
		valor(null, true) (
		  < COMA >
		  { generador.concatena();}
		valor(null, true) )*
	aux = < CP > {
	  generador.escribeToken(aux.image);
	  generador.saltoDeLinea();
	}< PC >
}

String valor(String tipo, boolean imprime) throws SemanticException: {
  Token id;
  Token valor;
  String tipo2;
} {
  (
	id = < ID >
	{
    	Variable v = new Variable();
    	v.setNombre(id.image);
    	adminVariable.existeVariable(v);
    	v = adminVariable.obtenerVariable(v);
    	adminVariable.variableInicializada(v);
    	tipo2 = v.getTipoDato();
    	valor = id;
  	}
	| valor = < INT_VAL > { tipo2 = "integer"; }
	| valor = < DEC_VAL > { tipo2 = "decimal"; }
	| valor = < STR_VAL > {
			tipo2 = CompiladorConstants.tokenImage[
			CompiladorConstants.STRING];
	   }
  )
  {
    if(tipo!=null) {
		ValidaTipos.tiposNoCoinciden(
		  tipo, tipo2, valor.beginLine,
		   valor.beginColumn);
    }
    //imprimir el valor
    if(imprime)
    	generador.escribeToken(valor.image); //56, "hola", numero
    return tipo2;
  }
}

void gramaticaAsignacion() throws SemanticException: {
  Token id;
  String tipo;
  Token aux;
} {
    id = < ID >
	{
    	Variable v = new Variable();
    	v.setNombre(id.image);
    	adminVariable.existeVariable(v);
    	v = adminVariable.obtenerVariable(v);
    	v.setInicializada(true);
    	tipo = v.getTipoDato();
    	//imprimir el id
    	generador.escribeToken(id.image);
  	} aux = < IGUAL >
  	{ generador.escribeToken(aux.image); }
  	operacion(tipo, false) < PC >
}

void operacion(String tipo, boolean esFor)
throws SemanticException: {
  boolean imprime = true;
} {
  {
    if(esFor) imprime = false;
  }
	( valor(tipo, imprime) | opParentesis(tipo) )
	( opAritmetico(tipo, esFor)
	( valor(tipo, imprime) | opParentesis(tipo) ) )*
}

void opParentesis(String tipo)
throws SemanticException: {
 Token aux;
} {
  aux = < AP >
  { generador.escribeToken(aux.image); }
  operacion(tipo, false)
  aux = < CP >
  { generador.escribeToken(aux.image); }
}

void opAritmetico(String tipo, boolean esFor)
throws SemanticException: {
	Token operador;
}
{
	(	  operador = < SUMA >
	| operador = < RESTA >
	| operador = < MULTI >
	| operador = < DIV >
	| operador = < MOD >
	)
	{
		ValidaTipos.validaOperador(
		  tipo,
		  operador.image,
		  operador.beginLine,
		  operador.beginColumn);
		  //imprimimos el operador
		  if(!esFor)
		  	generador.escribeToken(operador.image);
	}
}
void gramaticaIf() throws SemanticException: {
} {
	< IF > < AP >
	{
	  generador.escribeInstruccion("If ");
	}
	condicion(false) < CP > <AL >
	{
	  generador.escribeInstruccion(" Then");
	  generador.saltoDeLinea();
	}
	    sentencias()
	< CL >
	[ < ELSE >
		{
		  generador.escribeInstruccion("Else");
		  generador.saltoDeLinea();
		}
	 <AL > sentencias() < CL > ]
	{
	  generador.escribeInstruccion("End If");
	  generador.saltoDeLinea();
	}
}

void condicion(boolean esFor) throws SemanticException: {
} {
	condicionSimple(esFor) ( opLogico() condicionSimple(esFor))*
}

void condicionSimple(boolean esFor)throws SemanticException: {
  String tipo;
  boolean imprime = true;
} {
  	{
  	  if(esFor) imprime=false;
  	}
	tipo = valor(null,imprime)
	opRelacional(tipo, esFor) valor(tipo, true)
}

void opLogico(): {
} {
	< AND > { generador.escribeToken(" and "); }
	| < OR > { generador.escribeToken(" or "); } 
}

void opRelacional(String tipo, boolean esFor)
throws SemanticException: {
  Token operador1 = null;
  String operador = null;
} {
  (
  operador1 =< MAYOR > { operador = ">";}
  [< IGUAL > { operador+="=";}]
| operador1 = < MENOR > { operador = "<";}
  [< IGUAL > { operador +="="; }]
| operador1 = < IGUAL ><IGUAL > { operador = "=="; }
| operador1 = < NOT > <IGUAL > { operador = "!="; }
  )
  {
    if(operador!=null) {
		ValidaTipos.validaOperador(tipo, operador,
		operador1.beginLine, operador1.beginColumn);
		if(operador.equals(" != "))
			operador = " <> ";
		if(!esFor)
			generador.escribeToken(operador); 
    }
  }
}

void gramaticaSwitch() throws SemanticException: {
  Token id;
  Token valor;
} {
  < SELECT > < AP > id = < ID > <CP > <AL >
  {
	Variable v = new Variable();
	v.setNombre(id.image);
	adminVariable.existeVariable(v);
	v = adminVariable.obtenerVariable(v);
	adminVariable.variableInicializada(v);
	//imprimos el select
	generador.escribeInstruccion("Select ");
	generador.escribeToken(id.image);
	generador.saltoDeLinea();
  }
  ( < CASE > valor = <INT_VAL > < DP >	
	{
	  generador.escribeInstruccion("Case ");
	  generador.escribeToken(valor.image);
	  generador.saltoDeLinea();
	  
	}
	sentencias() < BREAK > <PC >
  )+
  [ <ELSE > < DP >
	{
	  generador.escribeInstruccion("Case Else");
	  generador.saltoDeLinea();
	}
  sentencias() ]
  < CL >
  {
    generador.escribeInstruccion("End Select");
  }
}

void gramaticaFor() throws SemanticException: {
  Token id1;
  Token id2;
} {
	< FOR >
	< AP > id1 = < ID > < IGUAL >
	{
	  Variable v1 = new Variable();
	  v1.setNombre(id1.image);
	  adminVariable.existeVariable(v1);
	  v1 = adminVariable.obtenerVariable(v1);
	  generador.escribeInstruccion("For ");
	  generador.escribeToken(id1.image);
	  generador.escribeToken(" = ");
	}
	 valor(v1.getTipoDato(), true)
	 {
	   generador.escribeInstruccion(" To ");
	 }
	 < PC >
			condicion(true) < PC >
			id2 = < ID > < IGUAL >
			{
				Variable v2 = new Variable();
				v2.setNombre(id2.image);
				adminVariable.existeVariable(v2);
				v2 = adminVariable.obtenerVariable(v2);
	        }
			operacion(v2.getTipoDato(), true)
	        < CP > <AL >
	        { generador.saltoDeLinea(); }
	        sentencias()
	< CL >
	{
		generador.escribeInstruccion("Next ");
		generador.escribeToken(id1.image);
		generador.saltoDeLinea();
	}
}

void gramaticaWhile() throws SemanticException: {
} {
	< WHILE > <AP >
	{
	  generador.escribeInstruccion("While ");
	}
	condicion(false) < CP > <AL >
	{
	  generador.saltoDeLinea();
	}
		sentencias()
	< CL >
	{
	  generador.escribeInstruccion("End While");
	}
}

void gramaticaDo() throws SemanticException: {
} {
	< DO > <AL >
	{
	  generador.escribeInstruccion("Do");
	  generador.saltoDeLinea();
	}
		sentencias()
	< CL >< WHILE >
	{
		generador.escribeInstruccion("Loop While ");	
	}
	 <AP > condicion(false) < CP > <PC >
	 {
	   generador.saltoDeLinea();
	 }
}

