src/edu/itsco/Compilador.java
/* Compilador.java */
/* Generated By:JavaCC: Do not edit this line. Compilador.java */
package edu.itsco;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import edu.itsco.semantica.*;
public class Compilador implements CompiladorConstants {

  private static AdministraVariable adminVariable;

  public static void main(String args [])
  {
    try {
        //Compilador compilador = new Compilador(System.in);
                Compilador compilador = new Compilador(
                  new FileInputStream("programa.txt"));
                adminVariable = new AdministraVariable();
                System.out.println("Iniciando la compilacion...");
        compilador.principal();
        System.out.println("Compilo correctamente xD");
        }catch(ParseException pex) {
                //Aqui hagan algo con su exception
                System.err.println(pex.getMessage());
        }catch(SemanticException se) {
                System.err.println(se.getMessage());
        }catch(FileNotFoundException fex) {
                System.err.println(fex.getMessage());
    }
  }

  static final public void principal() throws ParseException, SemanticException {
    jj_consume_token(PROGRAM);
    jj_consume_token(ID);
    jj_consume_token(AL);
    sentencias();
    jj_consume_token(CL);
}

  static final public void sentencias() throws ParseException, SemanticException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:
      case DECIMAL:
      case STRING:{
        declararVariable();
        break;
        }
      case READ:{
        gramaticaLeer();
        break;
        }
      case PRINT:{
        gramaticaImprimir();
        break;
        }
      case ID:{
        gramaticaAsignacion();
        break;
        }
      case IF:{
        gramaticaIf();
        break;
        }
      case SELECT:{
        gramaticaSwitch();
        break;
        }
      case FOR:{
        gramaticaFor();
        break;
        }
      case WHILE:{
        gramaticaWhile();
        break;
        }
      case DO:{
        gramaticaDo();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:
      case DECIMAL:
      case STRING:
      case PRINT:
      case READ:
      case IF:
      case SELECT:
      case FOR:
      case WHILE:
      case DO:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
}

  static final public void declararVariable() throws ParseException, SemanticException {Token id;
  Token tipoDato;
  boolean inicializada = false;
    tipoDato = tipoDato();
    id = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      jj_consume_token(IGUAL);
      operacion(tipoDato.image);
inicializada = true;
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    jj_consume_token(PC);
Variable v = new Variable(
                tipoDato.image, id.image, inicializada);
          //System.out.println(v);
          adminVariable.addVariable(v);
}

  static final public Token tipoDato() throws ParseException {Token tipoDato;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:{
      tipoDato = jj_consume_token(INTEGER);
      break;
      }
    case DECIMAL:{
      tipoDato = jj_consume_token(DECIMAL);
      break;
      }
    case STRING:{
      tipoDato = jj_consume_token(STRING);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return tipoDato;}
    throw new Error("Missing return statement in function");
}

  static final public void gramaticaLeer() throws ParseException, SemanticException {Token id;
    jj_consume_token(READ);
    jj_consume_token(AP);
    id = jj_consume_token(ID);
    jj_consume_token(CP);
    jj_consume_token(PC);
Variable v = new Variable();
          v.setNombre(id.image);
          adminVariable.existeVariable(v);
          v = adminVariable.obtenerVariable(v);
          v.setInicializada(true);
}

  static final public void gramaticaImprimir() throws ParseException, SemanticException {
    jj_consume_token(PRINT);
    jj_consume_token(AP);
    valor(null);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMA);
      valor(null);
    }
    jj_consume_token(CP);
    jj_consume_token(PC);
}

  static final public String valor(String tipo) throws ParseException, SemanticException {Token id;
  Token valor;
  String tipo2;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      id = jj_consume_token(ID);
Variable v = new Variable();
        v.setNombre(id.image);
        adminVariable.existeVariable(v);
        v = adminVariable.obtenerVariable(v);
        adminVariable.variableInicializada(v);
        tipo2 = v.getTipoDato();
        valor = id;
      break;
      }
    case INT_VAL:{
      valor = jj_consume_token(INT_VAL);
tipo2 = "integer";
      break;
      }
    case DEC_VAL:{
      valor = jj_consume_token(DEC_VAL);
tipo2 = "decimal";
      break;
      }
    case STR_VAL:{
      valor = jj_consume_token(STR_VAL);
tipo2 = CompiladorConstants.tokenImage[
                        CompiladorConstants.STRING];
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
if(tipo!=null) {
                ValidaTipos.tiposNoCoinciden(
                  tipo, tipo2, valor.beginLine,
                   valor.beginColumn);
    }
    {if ("" != null) return tipo2;}
    throw new Error("Missing return statement in function");
}

  static final public void gramaticaAsignacion() throws ParseException, SemanticException {Token id;
  String tipo;
    id = jj_consume_token(ID);
Variable v = new Variable();
        v.setNombre(id.image);
        adminVariable.existeVariable(v);
        v = adminVariable.obtenerVariable(v);
        v.setInicializada(true);
        tipo = v.getTipoDato();
    jj_consume_token(IGUAL);
    operacion(tipo);
    jj_consume_token(PC);
}

  static final public void operacion(String tipo) throws ParseException, SemanticException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:
    case INT_VAL:
    case DEC_VAL:
    case STR_VAL:{
      valor(tipo);
      break;
      }
    case AP:{
      opParentesis(tipo);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SUMA:
      case RESTA:
      case MULTI:
      case DIV:
      case MOD:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      opAritmetico(tipo);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:
      case INT_VAL:
      case DEC_VAL:
      case STR_VAL:{
        valor(tipo);
        break;
        }
      case AP:{
        opParentesis(tipo);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void opParentesis(String tipo) throws ParseException, SemanticException {
    jj_consume_token(AP);
    operacion(tipo);
    jj_consume_token(CP);
}

  static final public void opAritmetico(String tipo) throws ParseException, SemanticException {Token operador;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SUMA:{
      operador = jj_consume_token(SUMA);
      break;
      }
    case RESTA:{
      operador = jj_consume_token(RESTA);
      break;
      }
    case MULTI:{
      operador = jj_consume_token(MULTI);
      break;
      }
    case DIV:{
      operador = jj_consume_token(DIV);
      break;
      }
    case MOD:{
      operador = jj_consume_token(MOD);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
System.out.println(tipo);
                ValidaTipos.validaOperador(
                  tipo,
                  operador.image,
                  operador.beginLine,
                  operador.beginColumn);
}

  static final public void gramaticaIf() throws ParseException, SemanticException {
    jj_consume_token(IF);
    jj_consume_token(AP);
    condicion();
    jj_consume_token(CP);
    jj_consume_token(AL);
    sentencias();
    jj_consume_token(CL);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      jj_consume_token(AL);
      sentencias();
      jj_consume_token(CL);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
}

  static final public void condicion() throws ParseException, SemanticException {
    condicionSimple();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_4;
      }
      opLogico();
      condicionSimple();
    }
}

  static final public void condicionSimple() throws ParseException, SemanticException {String tipo;
    tipo = valor(null);
    opRelacional(tipo);
    valor(tipo);
}

  static final public void opLogico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case AND:{
      jj_consume_token(AND);
      break;
      }
    case OR:{
      jj_consume_token(OR);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void opRelacional(String tipo) throws ParseException, SemanticException {Token operador1 = null;
  String operador = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MAYOR:{
      operador1 = jj_consume_token(MAYOR);
operador = ">";
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IGUAL:{
        jj_consume_token(IGUAL);
operador+="=";
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      break;
      }
    case MENOR:{
      operador1 = jj_consume_token(MENOR);
operador = "<";
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IGUAL:{
        jj_consume_token(IGUAL);
operador +="=";
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      break;
      }
    case IGUAL:{
      operador1 = jj_consume_token(IGUAL);
      jj_consume_token(IGUAL);
operador = "==";
      break;
      }
    case NOT:{
      operador1 = jj_consume_token(NOT);
      jj_consume_token(IGUAL);
operador = "!=";
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
if(operador!=null) {
                ValidaTipos.validaOperador(tipo, operador,
                operador1.beginLine, operador1.beginColumn);
    }
}

  static final public void gramaticaSwitch() throws ParseException, SemanticException {Token id;
    jj_consume_token(SELECT);
    jj_consume_token(AP);
    id = jj_consume_token(ID);
    jj_consume_token(CP);
    jj_consume_token(AL);
Variable v = new Variable();
        v.setNombre(id.image);
        adminVariable.existeVariable(v);
        v = adminVariable.obtenerVariable(v);
        adminVariable.variableInicializada(v);
    label_5:
    while (true) {
      jj_consume_token(CASE);
      jj_consume_token(INT_VAL);
      jj_consume_token(DP);
      sentencias();
      jj_consume_token(BREAK);
      jj_consume_token(PC);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CASE:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_5;
      }
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      jj_consume_token(DP);
      sentencias();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(CL);
}

  static final public void gramaticaFor() throws ParseException, SemanticException {Token id1;
  Token id2;
    jj_consume_token(FOR);
    jj_consume_token(AP);
    id1 = jj_consume_token(ID);
    jj_consume_token(IGUAL);
Variable v1 = new Variable();
          v1.setNombre(id1.image);
          adminVariable.existeVariable(v1);
          v1 = adminVariable.obtenerVariable(v1);
    valor(v1.getTipoDato());
    jj_consume_token(PC);
    condicion();
    jj_consume_token(PC);
    id2 = jj_consume_token(ID);
    jj_consume_token(IGUAL);
Variable v2 = new Variable();
                                v2.setNombre(id2.image);
                                adminVariable.existeVariable(v2);
                                v2 = adminVariable.obtenerVariable(v2);
    operacion(v2.getTipoDato());
    jj_consume_token(CP);
    jj_consume_token(AL);
    sentencias();
    jj_consume_token(CL);
}

  static final public void gramaticaWhile() throws ParseException, SemanticException {
    jj_consume_token(WHILE);
    jj_consume_token(AP);
    condicion();
    jj_consume_token(CP);
    jj_consume_token(AL);
    sentencias();
    jj_consume_token(CL);
}

  static final public void gramaticaDo() throws ParseException, SemanticException {
    jj_consume_token(DO);
    jj_consume_token(AL);
    sentencias();
    jj_consume_token(CL);
    jj_consume_token(WHILE);
    jj_consume_token(AP);
    condicion();
    jj_consume_token(CP);
    jj_consume_token(PC);
}

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public CompiladorTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[18];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
	   jj_la1_init_0();
	   jj_la1_init_1();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x72fc0,0x72fc0,0x1000000,0x1c0,0x0,0x0,0x40000000,0xf80000,0x40000000,0xf80000,0x1000,0x18000000,0x18000000,0x1000000,0x1000000,0x27000000,0x4000,0x1000,};
	}
	private static void jj_la1_init_1() {
	   jj_la1_1 = new int[] {0x80,0x80,0x0,0x0,0x10,0x780,0x780,0x0,0x780,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,};
	}

  /** Constructor with InputStream. */
  public Compilador(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Compilador(java.io.InputStream stream, String encoding) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser.  ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new CompiladorTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Compilador(java.io.Reader stream) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new CompiladorTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new CompiladorTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Compilador(CompiladorTokenManager tm) {
	 if (jj_initialized_once) {
	   System.out.println("ERROR: Second call to constructor of static parser. ");
	   System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
	   System.out.println("	   during parser generation.");
	   throw new Error();
	 }
	 jj_initialized_once = true;
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(CompiladorTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  static private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[43];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 18; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		   if ((jj_la1_1[i] & (1<<j)) != 0) {
			 la1tokens[32+j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 43; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  static private boolean trace_enabled;

/** Trace enabled. */
  static final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
